Document null-safety enforcement, role-aware links and value-object serialization in README
Updates the Nullability section to describe the NullAway/Error Prone build gate, refreshes the HAL
link-generation example to the role-aware SecuredAggregateCommands, and adds a short note on
annotation-free value-object serialization.

Co-Authored-By: Claude Opus 4.8 (1M context) and Fable 5 <noreply@anthropic.com>